# GCPU-Hack-Sport-Coach

./: .gitignore  BUGFIX_500_ERRORS.md  NGROK_SETUP.md  PROJECT_README.md  README.md  UV_MIGRATION.md  calendar_call.py  data_call.py  eating_call.py  example_posture_analysis.py  gemini_call.py  gemini_prompt.py  main.py  main_fastapi.py  posture_analyzer.py  pyproject.toml  requirements.txt  server.py  skeletton.py  start_backend_ngrok.py  test_backend.py  test_gemini.py
api/: README.md  main.py
config/: firebase.json
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/components/: ExerciseSelector.tsx  FeedbackOverlay.tsx  SkeletonOverlay.tsx
mobile/src/screens/: WorkoutSession.tsx
mobile/src/services/: apiClient.ts
mobile/src/types/: analysis.ts
mobile/src/utils/: frameCapture.ts
multi_tool_agent/: .env  agent.py  tool.py
posture_analyzer/: __init__.py  angles.py  detect.py  exercise_recognizer.py  fatigue.py  generic.py  landmarks.py  pose_detector.py  summary.py
posture_analyzer/analyzers/: __init__.py  deadlift.py  lunge.py  plank.py  pushup.py  squat.py
simulated_data/: allowed_exercises.json  user1.json  user1_workoutPlan.json
