[project]
name = "ai-sport-coach"
version = "1.0.0"
description = "AI-powered posture analysis and coaching for workouts"
readme = "PROJECT_README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Core ML dependencies
    "opencv-python>=4.8.1.78,<5.0.0",
    "mediapipe>=0.10.7,<0.11.0",
    "numpy>=1.24.3,<2.0.0",
    "tensorflow>=2.13.0,<3.0.0",

    # API and utilities
    "google-genai>=0.4.0,<1.0.0",  # Newer Gemini SDK
    "python-dotenv>=1.0.0,<2.0.0",

    # FastAPI backend
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pillow>=10.1.0,<11.0.0",
    "pyngrok>=7.0.0,<8.0.0",  # Ngrok tunnel for mobile app connectivity
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []
package = false  # This is an application, not a library

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"
